--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
     </main>
     <footer>
       <p>
-        Student name |
-        <a href="mailto:nombre.apellido@uoc.es">nombre.apellido@uoc.es</a>
+        Jos&eacute; David Quero S&aacute;nchez |
+        <a href="mailto:daquesan@uoc.edu">daquesan@uoc.edu</a>
       </p>
       <p>Javascript para programadores | UOC | 2018-19</p>
     </footer>
