--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <header>
       <h1><span id="logo"></span> <span id="title">PEDIA</span></h1>
-      <form id="search">
+      <form id="search" method="GET">
         <div>
-          <input type="search" name="search" /> <button>Search</button>
+          <input type="search" name="search" />
+          <button type="submit">Search</button>
           <p id="disclaimer">Data provided by Marvel. © 2018 MARVEL</p>
         </div>
       </form>
