--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
-
   <body>
     <header>
       <h1><span id="logo"></span> <span id="title">PEDIA</span></h1>
@@ -39,7 +38,7 @@
         </div>
       </section>
       <section id="comics">
-        <ul class="comicList">
+        <ul id="comicList" class="comicList">
           <li class="comicListItem">
             <h2>
               Marvel Masterworks: The Amazing Spider-Man Vol. 20 (Hardcover)
