--- a/index.html
+++ b/index.html
@@ -37,162 +37,7 @@
           </div>
         </div>
       </section>
-      <section id="comics">
-        <ul id="comicList" class="comicList">
-          <li class="comicListItem">
-            <h2>
-              Marvel Masterworks: The Amazing Spider-Man Vol. 20 (Hardcover)
-            </h2>
-            <h3>Characters</h3>
-            <ul class="companions">
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/e/03/526952357d91c.jpg"
-                  title="Black Cat"
-                  alt="Black Cat"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/6/10/4fe364b0a2177.jpg"
-                  title="Dazzler"
-                  alt="Dazzler"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/5/f0/5261a85a501fe.jpg"
-                  title="Doctor Strange"
-                  alt="Doctor Strange"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/5/70/4c003d3b033e8.jpg"
-                  title="Mesmero"
-                  alt="Mesmero"
-                />
-              </li>
-            </ul>
-            <h3>Description</h3>
-            <p class="description">
-              Collects Amazing Spider-Man (1963) #203-212, Annual (1964) #14.
-              Peter Parker has always had the worst luck, but Spider-Man is a
-              hit with the ladies in his latest round of adventures! The Black
-              Cat is back, and her love/hate relationship with Spidey is heating
-              up! Dazzler disco-dances with our hero in an early appearance not
-              to be missed! But she’s not the only mutant caught in Spidey’s web
-              as Mesmero returns — courtesy of writer Dennis O’Neil! And Spidey
-              history is made with the debut of an all-time-great Spider-Man
-              artist: John Romita Jr.! JRJR carries on the family tradition,
-              creating some of the most iconic Spider-Man adventures of all time
-              — beginning right here! Also featuring a Stern ’n’ Byrne oneshot,
-              the first appearances of Madame Web and Hydro-Man, and Frank
-              Miller’s classic Spider-Man/Doctor Strange team-up!
-            </p>
-          </li>
-          <li class="comicListItem">
-            <h2>
-              Jeph Loeb & Tim Sale: Yellow, Blue, Gray & White (Hardcover)
-            </h2>
-            <h3>Characters</h3>
-            <ul class="companions">
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/3/50/537ba56d31087.jpg"
-                  title="Captain America"
-                  alt="Captain America"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/d/50/50febb79985ee.jpg"
-                  title="Daredevil"
-                  alt="Daredevil"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/5/a0/538615ca33ab0.jpg"
-                  title="Hulk"
-                  alt="Hulk"
-                />
-              </li>
-            </ul>
-            <h3>Description</h3>
-            <p class="description">
-              All four of Jeph Loeb and Tim Sale’s classic “color” masterpieces
-              in one atmospheric hardcover! Blind acrobat Daredevil was inspired
-              to heroism by the example of his prizefighter father — but Matt
-              Murdock is a young man in love with Karen Page. Relive Daredevil’s
-              heartwarming, heartbreaking debut! Then, Peter Parker and Gwen
-              Stacy want to spend the rest of their lives together — but first,
-              Spider-Man must run a gauntlet of his greatest foes. No matter how
-              powerful the Incredible Hulk becomes, his heart can still be
-              shattered by Betty Ross — the daughter of his greatest enemy! And
-              Captain America battles beside best friend Bucky behind enemy
-              lines in World War II! Touching and insightful tales of
-              super-heroism from an Eisner Award-winning team! Collecting
-              DAREDEVIL: YELLOW #1-6, SPIDER-MAN: BLUE #1-6, HULK: GRAY #1-6 and
-              CAPTAIN AMERICA: WHITE #0-5.
-            </p>
-          </li>
-          <li class="comicListItem">
-            <h2>Wakanda Forever (Trade Paperback)</h2>
-            <h3>Characters</h3>
-            <ul class="companions">
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/9/20/5102c774ebae7.jpg"
-                  title="Avengers"
-                  alt="Avengers"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/6/60/5261a80a67e7d.jpg"
-                  title="Black Panther"
-                  alt="Black Panther"
-                />
-              </li>
-              <li>
-                <img
-                  class="portrait"
-                  src="http://i.annihil.us/u/prod/marvel/i/mg/8/03/510c08f345938.jpg"
-                  title="X-Men"
-                  alt="X-Men"
-                />
-              </li>
-            </ul>
-            <h3>Description</h3>
-            <p class="description">
-              Collects Amazing Spider-Man: Wakanda Forever, X-Men: Wakanda
-              Forever, Avengers: Wakanda Forever And Black Panther Annual #1.
-              The Dora Milaje are venturing out of Wakanda — and adventuring
-              across the Marvel Universe! It’s Wakanda’s best warriors — Okoye,
-              Ayo and Aneka — on a globe-trotting mission to protect the realm
-              at any cost. When they discover a threat from their homeland
-              causing trouble in New York, they’ll leap into action — with or
-              without their king. And that brings them to Spider-Man’s friendly
-              neighborhood! But former Dora Milaje member Nakia, A.K.A. Malice,
-              has set a trap to lure the Black Panther into her obsessive
-              clutches — beginning by taking out his one true love, Storm of the
-              X-Men! And when T’Challa joins the fight, he brings a few mighty
-              friends with him — and that means Okoye, Ayo and Aneka will
-              assemble alongside the Avengers!
-            </p>
-          </li>
-        </ul>
-      </section>
+      <section id="comics"><ul id="comicList" class="comicList"></ul></section>
     </main>
     <footer>
       <p>
