--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <form id="search" method="GET">
         <div>
           <input type="search" name="search" />
-          <button type="submit">Search</button>
+          <button type="submit" name="searchButton">Search</button>
           <p id="disclaimer">Data provided by Marvel. © 2018 MARVEL</p>
         </div>
       </form>
