--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
+    <div id="loading"></div>
     <header>
       <h1><span id="logo"></span> <span id="title">PEDIA</span></h1>
       <form id="search" method="GET">
