--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Template PEC3</title>
+    <title>PEC3 - MARVELPEDIA</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
@@ -22,18 +22,15 @@
         <div class="heroInfo">
           <img
             class="portrait"
-            src="http://i.annihil.us/u/prod/marvel/i/mg/3/50/526548a343e4b.jpg"
+            src="https://i.pinimg.com/originals/e5/53/46/e55346d539daeda80680794de7f29a93.gif"
             title="Spider-man"
             alt="Spider-man"
           />
           <div id="heroDescription">
-            <h1>Spider-man</h1>
+            <h1>EXPLORE THE MARVEL UNIVERSE</h1>
             <p>
-              Bitten by a radioactive spider, high school student Peter Parker
-              gained the speed, strength and powers of a spider. Adopting the
-              name Spider-Man, Peter hoped to start a career using his new
-              abilities. Taught that with great power comes great
-              responsibility, Spidey has vowed to use his powers to help people.
+              Dive into the dazzling domain of all the classic characters you
+              love - and those you'll soon discover!
             </p>
           </div>
         </div>
